// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar component renders a search bar with a default value 1`] = `
<form>
  <input
    onChange={[Function]}
    type="text"
    value={
      Object {
        "queryField": null,
        "searchFunction": [Function],
      }
    }
  />
  <button
    onSubmit={
      Object {
        "enqueueCallback": [Function],
        "enqueueCallbackInternal": [Function],
        "enqueueElementInternal": [Function],
        "enqueueForceUpdate": [Function],
        "enqueueReplaceState": [Function],
        "enqueueSetState": [Function],
        "isMounted": [Function],
        "validateCallback": [Function],
      }
    }
  >
    Search
  </button>
</form>
`;

exports[`SearchBar component renders a search bar with a supplied value 1`] = `
<form>
  <input
    onChange={[Function]}
    type="text"
    value={
      Object {
        "queryField": "potato",
        "searchFunction": [Function],
      }
    }
  />
  <button
    onSubmit={
      Object {
        "enqueueCallback": [Function],
        "enqueueCallbackInternal": [Function],
        "enqueueElementInternal": [Function],
        "enqueueForceUpdate": [Function],
        "enqueueReplaceState": [Function],
        "enqueueSetState": [Function],
        "isMounted": [Function],
        "validateCallback": [Function],
      }
    }
  >
    Search
  </button>
</form>
`;
